--- a/app/src/main/res/layout/nav_header_driver_main.xml
+++ b/app/src/main/res/layout/nav_header_driver_main.xml
@@ -14,7 +14,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/profile_image_header"
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_60sdp"
         android:layout_marginTop="@dimen/_20sdp"
@@ -29,7 +29,7 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/tvNameHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_7sdp"
@@ -37,9 +37,9 @@
         android:text="Ishwar Kumar"
         android:textColor="@color/white"
         android:textSize="@dimen/_22sdp"
-        app:layout_constraintBottom_toBottomOf="@id/profile_image"
-        app:layout_constraintStart_toEndOf="@+id/profile_image"
-        app:layout_constraintTop_toTopOf="@id/profile_image" />
+        app:layout_constraintBottom_toBottomOf="@id/profile_image_header"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_header"
+        app:layout_constraintTop_toTopOf="@id/profile_image_header" />
 
     <View
         android:id="@+id/view1"
@@ -49,20 +49,20 @@
         android:background="@color/light_orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_image" />
+        app:layout_constraintTop_toBottomOf="@id/profile_image_header" />
 
     <TextView
-        android:id="@+id/tvMessage"
+        android:id="@+id/tvRating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
+        android:drawableStart="@drawable/ic_baseline_star_24"
+        android:drawablePadding="@dimen/_5sdp"
         android:fontFamily="@font/roboto_light"
         android:paddingTop="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp"
         android:text="4.5"
-        android:drawablePadding="@dimen/_5sdp"
         android:textSize="@dimen/_18sdp"
-        android:drawableStart="@drawable/ic_baseline_star_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view1" />
@@ -75,6 +75,6 @@
         android:background="@color/light_orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMessage" />
+        app:layout_constraintTop_toBottomOf="@id/tvRating" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
