--- a/app/src/main/res/layout/fragment_driver_home.xml
+++ b/app/src/main/res/layout/fragment_driver_home.xml
@@ -1,8 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chipIgnore"
+        style=" @style/Theme.MaterialComponents.Light"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_16sdp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="@string/decline"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:chipBackgroundColor="@color/black"
+        app:chipIcon="@drawable/ic_baseline_cancel_24"
+        app:chipIconTint="@color/white" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layoutAccept"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="@dimen/_8sdp"
+        android:elevation="@dimen/_10sdp"
+        android:visibility="gone"
+        app:cardBackgroundColor="@color/cred"
+        app:cardCornerRadius="@dimen/_8sdp"
+        app:cardElevation="@dimen/_10sdp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="@dimen/_16sdp">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:padding="@dimen/_16sdp">
+
+                <TextView
+                    android:id="@+id/tvTextUber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:fontFamily="@font/roboto_light"
+                    android:text="@string/uber"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_18sdp" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:gravity="center">
+
+                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                        android:id="@+id/circularProgressBar"
+                        android:layout_width="@dimen/_60sdp"
+                        android:layout_height="@dimen/_60sdp"
+                        app:cpb_background_progressbar_color="@color/white"
+                        app:cpb_background_progressbar_width="@dimen/_4sdp"
+                        app:cpb_progress="0"
+                        app:cpb_progress_direction="to_right"
+                        app:cpb_progress_max="100"
+                        app:cpb_progressbar_color="@color/light_orange"
+                        app:cpb_progressbar_width="@dimen/_3sdp"
+                        app:cpb_round_border="false" />
+
+                    <ImageView
+                        android:layout_width="@dimen/_40sdp"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_centerInParent="true"
+                        android:clickable="false"
+                        android:src="@drawable/ic_baseline_person_24"
+                        app:tint="@color/white" />
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/textRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:drawableRight="@drawable/ic_baseline_star_24"
+                    android:drawablePadding="@dimen/_4sdp"
+                    android:fontFamily="@font/roboto_light"
+                    android:text="@string/_4_5"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_18sdp" />
+
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvEstimateTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/roboto_light"
+                android:text="2 min"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_20sdp" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+</FrameLayout>
