--- a/app/src/main/res/layout/fragment_driver_home.xml
+++ b/app/src/main/res/layout/fragment_driver_home.xml
@@ -25,6 +25,21 @@
         app:chipIconTint="@color/white" />
 
 
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chipAccept"
+        style=" @style/Theme.MaterialComponents.Light"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_16sdp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="@string/Accept"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        android:layout_gravity="end"
+        app:chipBackgroundColor="@color/black"
+        app:chipIcon="@drawable/ic_baseline_check_circle_24"
+        app:chipIconTint="@color/white" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/layoutAccept"
         android:layout_width="match_parent"
